--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@stripe/stripe-js": "github:stripe/stripe-js",
+    "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "framer-motion": "^11.15.0",
+    "hamburgers": "^1.2.1",
     "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
     "react-countup": "^6.5.3",
